quadros com img e localização vida noturna

--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <div class="container">
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li class="select"><a href="index.html">Home</a></li>
+                    <li><a href="parques.html">Parques</a></li>
+                    <li><a href="vidanoturna.html">Vida Noturna</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="quadro">
+        </div>
 
     </div>
 </body>
