--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -7,8 +7,145 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
-
+    <div class="container" id="noite">
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="parques.html">Parques</a></li>
+                    <li class="select"><a href="vidanoturna.html">Vida Noturna</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="quadro">
+            
+            <div class="barra">
+                <div class="bloco">
+                    <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
+                    <p>Legenda</p>
+                    <hr>
+                    <p>Descrição</p>
+                    <div class="local">
+                        <div>
+                            <ul>
+                                <li>Horario de funcionamento : 11:00-21:00</li>
+                                <li>Melhor dia para visitação : domingo </li>
+                                <li>Horários de maior procura : 14:00-18:00 (sab)</li>
+                                <li>Preços aplicados </li>
+                                <li>https://www.barbrahmacentro.com/ </li>
+                            </ul>
+                        </div>
+                        <div class="mapa">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234121.23941369014!2d-46.689345910334524!3d-23.52730947129499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11889938a758d631!2sBar%20Brahma!5e0!3m2!1spt-BR!2sbr!4v1622496363546!5m2!1spt-BR!2sbr"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="bloco"> <!--Skye bar-->
+                    <img src="img/skybar-unique.jpg" alt="skye">
+                    <p>Legenda</p>
+                    <hr>
+                    <p>Descrição</p>
+                    <div class="local">
+                        <div>
+                            <ul>
+                               <li> Horario de funcionamento </li>
+                               <li> Melhor dia para visitação </li>
+                               <li> Horários de maior procura </li>
+                               <li> Preços aplicados </li>
+                               <li>Link de acesso ao site oficial. </li>
+                            </ul>
+                        </div>
+                        <div class="mapa">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.626615299393!2d-46.66925338502178!3d-23.581850084672794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59e140e844a5%3A0xee8005a359e780e3!2sSkye!5e0!3m2!1spt-BR!2sbr!4v1622490577772!5m2!1spt-BR!2sbr"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="barra">
+                <div class="bloco"><!--veloso-->
+                    <img src="img/veloso.jpg" alt="veloso">
+                    <p>Legenda</p>
+                    <hr>
+                    <p>Descrição</p>
+                    <div class="local">
+                        <div>
+                            <ul>
+                                <li> Horario de funcionamento </li>
+                                <li> Melhor dia para visitação </li>
+                                <li> Horários de maior procura </li>
+                                <li> Preços aplicados </li>
+                                <li>Link de acesso ao site oficial. </li>
+                             </ul>
+                        </div>
+                        <div class="mapa">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.534155904097!2d-46.63734158429901!3d-23.585168784671094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5980ec1cedf5%3A0xf567c8180d5d40b7!2sVeloso%20Bar!5e0!3m2!1spt-BR!2sbr!4v1622497292941!5m2!1spt-BR!2sbr"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div class="bloco"><!--D-edge-->
+                    <img src="img/dedge.jpg" alt="dedge">
+                    <p>Legenda</p>
+                    <hr>
+                    <p>Descrição</p>
+                    <div class="local">
+                        <div>
+                            <ul>
+                               <li> Horario de funcionamento </li>
+                               <li> Melhor dia para visitação </li>
+                               <li> Horários de maior procura </li>
+                               <li> Preços aplicados </li>
+                               <li>Link de acesso ao site oficial. </li>
+                            </ul>
+                        </div>
+                        <div class="mapa">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1221465586855!2d-46.664396485022806!3d-23.52810878469941!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce58053897fc67%3A0xc77a6d673e117223!2sD.EDGE!5e0!3m2!1spt-BR!2sbr!4v1622497498786!5m2!1spt-BR!2sbr"></iframe>    
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="barra">
+                <div class="bloco"><!--the week-->
+                    <img src="img/the-week.jpg" alt="the-week">
+                    <p>Legenda</p>
+                    <hr>
+                    <p>Descrição</p>
+                    <div class="local">
+                        <div>
+                            <ul>
+                                <li> Horario de funcionamento </li>
+                                <li> Melhor dia para visitação </li>
+                                <li> Horários de maior procura </li>
+                                <li> Preços aplicados </li>
+                                <li>Link de acesso ao site oficial. </li>
+                             </ul>
+                        </div>
+                        <div class="mapa">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.267011141381!2d-46.69027668502295!3d-23.522896984702033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef80cc725c0fd%3A0x7d565f932ef76f16!2sThe%20Week%20Brazil!5e0!3m2!1spt-BR!2sbr!4v1622497695501!5m2!1spt-BR!2sbr"></iframe>    
+                        </div>
+                    </div>
+                </div>
+                <div class="bloco">
+                    <img src="img/Villa-Country.jpg" alt="Villa-Country">
+                    <p>Legenda</p>
+                    <hr>
+                    <p>Descrição</p>
+                    <div class="local">
+                        <div>
+                            <ul>
+                               <li> Horario de funcionamento </li>
+                               <li> Melhor dia para visitação </li>
+                               <li> Horários de maior procura </li>
+                               <li> Preços aplicados </li>
+                               <li>Link de acesso ao site oficial. </li>
+                            </ul>
+                        </div>
+                        <div class="mapa">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.1264997749395!2d-46.672488185022864!3d-23.527952184699526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5802fdab9fd7%3A0x8f19e039ceb9e889!2sVilla%20Country!5e0!3m2!1spt-BR!2sbr!4v1622497874251!5m2!1spt-BR!2sbr"></iframe>    
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
