correção nos quadros

--- a/parques.html
+++ b/parques.html
@@ -17,9 +17,102 @@
                 </ul>
             </nav>
         </div>
-        <div class="quadro">
-
+        <div class="barra">
+            <div class="bloco2">
+                <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
+                <p>Legenda</p>
+                <hr>
+                <div><p>Descrição</p>
+                    Classificação
+                </div>
+                <div class="local">
+                    <div>
+                        <ul>
+                            <li>Horario de funcionamento : 11:00-21:00</li>
+                            <li>Melhor dia para visitação : domingo </li>
+                            <li>Horários de maior procura : 14:00-18:00 (sab)</li>
+                            <li>Preços aplicados </li>
+                            <li>https://www.barbrahmacentro.com/ </li>
+                        </ul>
+                    </div>
+                    <div class="mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234121.23941369014!2d-46.689345910334524!3d-23.52730947129499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11889938a758d631!2sBar%20Brahma!5e0!3m2!1spt-BR!2sbr!4v1622496363546!5m2!1spt-BR!2sbr"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="bloco2"> <!--Skye bar-->
+                <img src="img/skybar-unique.jpg" alt="skye">
+                <p>Legenda</p>
+                <hr>
+                <div><p>Descrição</p>
+                    Classificação
+                </div>
+                <div class="local">
+                    <div>
+                        <ul>
+                           <li> Horario de funcionamento </li>
+                           <li> Melhor dia para visitação </li>
+                           <li> Horários de maior procura </li>
+                           <li> Preços aplicados </li>
+                           <li>Link de acesso ao site oficial. </li>
+                        </ul>
+                    </div>
+                    <div class="mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.626615299393!2d-46.66925338502178!3d-23.581850084672794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59e140e844a5%3A0xee8005a359e780e3!2sSkye!5e0!3m2!1spt-BR!2sbr!4v1622490577772!5m2!1spt-BR!2sbr"></iframe>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="barra">
+            <div class="bloco2">
+                <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
+                <p>Legenda</p>
+                <hr>
+                <div><p>Descrição</p>
+                    Classificação
+                </div>
+                <div class="local">
+                    <div>
+                        <ul>
+                            <li>Horario de funcionamento : 11:00-21:00</li>
+                            <li>Melhor dia para visitação : domingo </li>
+                            <li>Horários de maior procura : 14:00-18:00 (sab)</li>
+                            <li>Preços aplicados </li>
+                            <li>https://www.barbrahmacentro.com/ </li>
+                        </ul>
+                    </div>
+                    <div class="mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234121.23941369014!2d-46.689345910334524!3d-23.52730947129499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11889938a758d631!2sBar%20Brahma!5e0!3m2!1spt-BR!2sbr!4v1622496363546!5m2!1spt-BR!2sbr"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="bloco2"> <!--Skye bar-->
+                <img src="img/skybar-unique.jpg" alt="skye">
+                <p>Legenda</p>
+                <hr>
+                <div><p>Descrição</p>
+                    Classificação
+                </div>
+                <div class="local">
+                    <div>
+                        <ul>
+                           <li> Horario de funcionamento </li>
+                           <li> Melhor dia para visitação </li>
+                           <li> Horários de maior procura </li>
+                           <li> Preços aplicados </li>
+                           <li>Link de acesso ao site oficial. </li>
+                        </ul>
+                    </div>
+                    <div class="mapa">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.626615299393!2d-46.66925338502178!3d-23.581850084672794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59e140e844a5%3A0xee8005a359e780e3!2sSkye!5e0!3m2!1spt-BR!2sbr!4v1622490577772!5m2!1spt-BR!2sbr"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
+
+        
     </div>
 </body>
 </html>
