modelo das colunas

--- a/parques.html
+++ b/parques.html
@@ -8,15 +8,20 @@
 </head>
 <body>
     <div class="container" id="dia">
+        <div class="logo">
+            Projeto Traveller
+        </div>
         <div class="menu">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="select"><a href="parques.html">Parques</a></li>
+                    <li class="select2"><a href="parques.html">Parques</a></li>
                     <li><a href="vidanoturna.html">Vida Noturna</a></li>
                 </ul>
             </nav>
         </div>
+        <div class="quadro">
+            <h1>Aqui estão os melhores parques da região de São Paulo</h1>
         <div class="barra">
             <div class="bloco2">
                 <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
@@ -108,6 +113,7 @@
                     </div>
                 </div>
             </div>
+        </div>
         </div>
         
 
