--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -20,75 +20,40 @@
                 </ul>
             </nav>
         </div>
-        <div>
-            
+        <div class="quadro">
+            <h1>Aqui estão alguns dos melhores locais para se divertir na vida noturna</h1>
             <div class="barra">
                 <div class="bloco">
                     <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
-                    <p>Legenda</p>
+                    <h2>Bar Brahma</h2>
                     <hr>
-                    <div><p>Descrição</p>
-                        Classificação
+                    <div class="DesAva">
+                        <p>Um dos favoritos dos intelectuais, músicos e políticos nas décadas de 50 e 60, com cerveja, lanches e música.</p>
+                        <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
-                    <div class="local">
+                    <div class="DesAva">
+                        <div class="list">
+                                <ul>
+                                    <li>Horario de funcionamento : 11:00-21:00 </li>
+                                    <li>Melhor dia para visitação : domingo </li>
+                                    <li>Horários de maior procura : 14:00-18:00 (sab)</li>
+                                    <li>Preços : Apartir de R$ 6,00 </li>
+                                    <li>Site : https://www.barbrahmacentro.com</li>
+                                </ul>
+                        </div>
                         <div>
-                            <ul>
-                                <li>Horario de funcionamento : 11:00-21:00</li>
-                                <li>Melhor dia para visitação : domingo </li>
-                                <li>Horários de maior procura : 14:00-18:00 (sab)</li>
-                                <li>Preços aplicados </li>
-                                <l            <div class="barra">
-                <div class="bloco">
-                    <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
-                    <p>Legenda</p>
-                    <hr>
-                    <div><p>Descrição</p>
-                        Classificação
-                    </div>
-                    <div class="local">
-                        <div>
-                            <ul>
-                                <li>Horario de funcionamento : 11:00-21:00</li>
-                                <li>Melhor dia para visitação : domingo </li>
-                                <li>Horários de maior procura : 14:00-18:00 (sab)</li>
-                                <li>Preços aplicados </li>
-                                <li>https://www.barbrahmacentro.com/ </li>
-                            </ul>
-                        </div>
-                        <div class="mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234121.23941369014!2d-46.689345910334524!3d-23.52730947129499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11889938a758d631!2sBar%20Brahma!5e0!3m2!1spt-BR!2sbr!4v1622496363546!5m2!1spt-BR!2sbr"></iframe>
+                            <form action="https://barbrahmacentro.namesa.online/home">
+                                <input type="submit" value="Confira nosso cardápio" class="btn">
+                            </form>
                         </div>
                     </div>
-                </div>
-                <div class="bloco"> <!--Skye bar-->
-                    <img src="img/skybar-unique.jpg" alt="skye">
-                    <p>Legenda</p>
-                    <hr>
-                    <div><p>Descrição</p>
-                        Classificação
-                    </div>
-                    <div class="local">
-                        <div>
-                            <ul>
-                               <li> Horario de funcionamento </li>
-                               <li> Melhor dia para visitação </li>
-                               <li> Horários de maior procura </li>
-                               <li> Preços aplicados </li>
-                               <li>Link de acesso ao site oficial. </li>
-                            </ul>
-                        </div>
-                        <div class="mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.626615299393!2d-46.66925338502178!3d-23.581850084672794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59e140e844a5%3A0xee8005a359e780e3!2sSkye!5e0!3m2!1spt-BR!2sbr!4v1622490577772!5m2!1spt-BR!2sbr"></iframe>
-                        </div>
-                    </div>
-                </div>
-            </div>i>https://www.barbrahmacentro.com/ </li>
-                            </ul>
-                        </div>
-                        <div class="mapa">
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234121.23941369014!2d-46.689345910334524!3d-23.52730947129499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11889938a758d631!2sBar%20Brahma!5e0!3m2!1spt-BR!2sbr!4v1622496363546!5m2!1spt-BR!2sbr"></iframe>
-                        </div>
-                    </div>
+                            <h3>Localização :</h3>
+                            <p>Av. São João, 677 - Centro Histórico de São Paulo, São Paulo - SP</p>
+                            <p>O endereço não poderia ser mais poético: como já dizia a música de Caetano, "alguma coisa acontece no meu coração, que só quando cruza a Ipiranga e a Avenida São João". E é nesta esquina, bem no coração da cidade, que São Paulo acolhe o Bar Brahma.</p>
+                            <div class="mapa">
+                                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234121.23941369014!2d-46.689345910334524!3d-23.52730947129499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x11889938a758d631!2sBar%20Brahma!5e0!3m2!1spt-BR!2sbr!4v1622496363546!5m2!1spt-BR!2sbr"></iframe>
+                            </div>
+                            </form>
                 </div>
                 <div class="bloco"> <!--Skye bar-->
                     <img src="img/skybar-unique.jpg" alt="skye">
