--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
-</head>
+</head>   <div class="logo">
+            Projeto Traveller
+        </div>
 <body>
     <div class="container">
+        <div class="logo">
+            Projeto Traveller
+        </div>
         <div class="menu">
             <nav>
                 <ul>
