--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -27,24 +27,24 @@
                     <img src="img/bar-brahma.jpg" alt="skye"><!--Bar brahma-->
                     <h2>Bar Brahma</h2>
                     <hr>
-                    <div class="DesAva">
+                    <div class="DesAva"> <!--Descrição e Avaliação-->
                         <p>Um dos favoritos dos intelectuais, músicos e políticos nas décadas de 50 e 60, com cerveja, lanches e música.</p>
                         <div class="auto"> 4,5 <img class="avaliacao" src="img/4,5.png" alt="4,5/5"></div>
                     </div>
-                    <div class="DesAva">
+                    <div class="DesAva"> <!--lista e botao cardapio-->
                         <div class="list">
                                 <ul>
                                     <li>Horario de funcionamento : 11:00-21:00 </li>
                                     <li>Melhor dia para visitação : domingo </li>
                                     <li>Horários de maior procura : 14:00-18:00 (sab)</li>
                                     <li>Preços : Apartir de R$ 6,00 </li>
-                                    <li>Site : https://www.barbrahmacentro.com</li>
+                                    <li>Site : <a href="https://www.barbrahmacentro.com">https://www.barbrahmacentro.com</a></li>
                                 </ul>
                         </div>
                         <div>
-                            <form action="https://barbrahmacentro.namesa.online/home">
-                                <input type="submit" value="Confira nosso cardápio" class="btn">
-                            </form>
+                           <form action="https://barbrahmacentro.namesa.online/home" target="_blank" >
+                                <input type="submit" name="Cardapio" class="btn" value="Confira nosso Cardápio"> 
+                           </form>
                         </div>
                     </div>
                             <h3>Localização :</h3>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="bloco"> <!--Skye bar-->
                     <img src="img/skybar-unique.jpg" alt="skye">
-                    <p>Legenda</p>
+                    <h2>Skye Bar</h2>
                     <hr>
                     <div><p>Descrição</p>
                         Classificação
