--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
-</head>   <div class="logo">
-            Projeto Traveller
-        </div>
+</head>  
 <body>
-    <div class="container">
+    <div class="container" id="home">
         <div class="logo">
             Projeto Traveller
         </div>
         <div class="menu">
             <nav>
                 <ul>
-                    <li class="select"><a href="index.html">Home</a></li>
+                    <li class="select3"><a href="index.html">Home</a></li>
                     <li><a href="parques.html">Parques</a></li>
                     <li><a href="vidanoturna.html">Vida Noturna</a></li>
                 </ul>
