teste de lightbox

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             </nav>
         </div>
         <div class="quadro">
+            <img src="img/aviao-e-aeronave-imagem-animada.gif">
+            <h1>Bem vindo ao projeto Traveller!</h1>
+            <h2>Escolher o melhor roteiro para suas viagens nunca foi tão fácil</h2>
+            <p>Nossa missão é facilitar sua experiência de busca por roteiros de viagens, Aqui estão selecionados os melhores parques, bares e boates de São Paulo.</p>
+            
         </div>
 
     </div>
