--- a/vidanoturna.html
+++ b/vidanoturna.html
@@ -169,7 +169,7 @@
                                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3658.267011141381!2d-46.69027668502295!3d-23.522896984702033!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef80cc725c0fd%3A0x7d565f932ef76f16!2sThe%20Week%20Brazil!5e0!3m2!1spt-BR!2sbr!4v1622497695501!5m2!1spt-BR!2sbr"></iframe>    
                             </div>
                         </div>
-                    <div class="bloco">
+                    <div class="bloco"> <!--villa contry-->
                         <img src="img/Villa-Country.jpg" alt="Villa-Country">
                         <p>Legenda</p>
                         <hr>
